Minor tidy